# prodity-risk-detection

./: .gitignore  README.md  pyproject.toml  requirements.txt
api/: main.py  models.py
model/: segment_best.pt
